--- a/index.html
+++ b/index.html
@@ -5,103 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-         padding: 00px;
-         margin: 00px;
-         font-family: monospace;
-        }
-        ::-webkit-scrollbar{
-            display: none;
-        }
-
-        .root{
-            background-size: cover;
-            background-repeat: no-repeat;
-
-            width: 100%;
-            height: 100vh;
-
-            position: absolute;
-            z-index: -99;
-            filter: blur(10px);
-        }
-        .box{
-            z-index: +99;
-            height: 100vh;
-            width: 100%;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .claim_box{
-            width: 500px;
-            height: 400px;
-            background-color: rgb(58, 93, 139);
-            border-radius: 10px;
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 10px;
-        }
-        .claim_logo{
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-        }
-
-        .recieve_test{
-            color: rgb(255, 255, 255);
-            font-family: 'Courier New', Courier, monospace;
-            margin-bottom: 10px;
-        }
-
-        .claim_box *{
-         color: white;
-        }
-        .eligable_baox{
-            width: 100%;
-            display: flex;
-            margin-bottom: 20px;
-            justify-content: space-around;
-            align-items: center;
-        }
-        .claim_btn{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            border-radius: 20px;
-            width: 150px;
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            gap: 5px;
-
-            padding: 5px 5px;
-            background-color: black;
-            font-weight: 600;
-        }
-        .claim_btn *{
-            color: rgb(255, 255, 255);
-            font-weight: 600;
-            font-family: monospace;
-        }
-        .claim_btn img{
-            width: 25px;
-        }
-
-        .spinner_img{
-            margin-left: auto;
-        }
-        .d-none{
-            display: none !important;
-        }
-
-    </style>
+    <link rel="stylesheet" href="assets/count.css">
 </head>
 <body>
     
@@ -112,7 +16,7 @@
     <div class="box">
 
         <div class="claim_box">
-           <img class="claim_logo" src="assets/image/images.jpeg" alt="">
+           <img class="claim_logo" src="assets/image/usdt.png" alt="">
            <br>
            <div class="recieve_test">You Can Receive</div>
            <h1>$5.5 USDT</h1>
@@ -138,10 +42,26 @@
               </div>
            </div>
 
+
+           <section>
+            <div class="container">
+            <h1>FCFS</h1>
+            <div id="countdown">
+                <ul>
+                <li><span id="days"></span>days</li>
+                <li><span id="hours"></span>Hours</li>
+                <li><span id="minutes"></span>Minutes</li>
+                <li><span id="seconds"></span>Seconds</li>
+                </ul>
+            </div>
+            </div>
+           </section>
+
         </div>
 
     </div>
 
 </body>
 </html>
+<script src="assets/count.js"></script>
 <script src="main.js"></script>
