--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <img class="claim_logo" src="assets/image/usdt.png" alt="">
            <br>
            <div class="recieve_test">You Can Receive</div>
-           <h1>$5.5 USDT</h1>
+           <h1>13.5 USDT</h1>
 
            <br><br>
 
@@ -34,7 +34,7 @@
            </div>
            <div class="eligable_baox">
              <div class="eligable_baox_inner">
-                <h3>$5.5 USDT</h3>
+                <h3>13.5 USDT</h3>
                 <span>On BNB Chain</span>
               </div>
               <div>
